Allow partition elements to be disabled